--- a/angular.json
+++ b/angular.json
@@ -24,15 +24,19 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
+              "node_modules/@coreui/coreui/dist/css/coreui.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/simple-line-icons/css/simple-line-icons.css"
+              "node_modules/simple-line-icons/css/simple-line-icons.css",
+              "node_modules/perfect-scrollbar/css/perfect-scrollbar.css",
+              "src/styles.css"
             ],
             "scripts": [
               "node_modules/jquery/dist/jquery.slim.min.js",
               "node_modules/popper.js/dist/umd/popper.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/@fortawesome/fontawesome-free/js/all.js"
+              "node_modules/@fortawesome/fontawesome-free/js/all.js",
+              "node_modules/perfect-scrollbar/dist/perfect-scrollbar.js",
+              "node_modules/@coreui/coreui/dist/js/coreui.min.js"
             ]
           },
           "configurations": {
