--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
+    "@coreui/coreui": "^2.1.12",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
+    "perfect-scrollbar": "^1.4.0",
     "popper.js": "^1.15.0",
     "rxjs": "~6.4.0",
     "simple-line-icons": "^2.4.1",
